# atlas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/atlas/: __init__.py  __main__.py
src/atlas/agent/: __main__.py  communication.py  event_subscriber.py  loop.py  poller.py  scheduler.py
src/atlas/agent/domains/: deebo.py  infrastructure.py  (+3 more)
src/atlas/db/: __init__.py  migrate.py  pool.py
src/atlas/embeddings/: __init__.py  cache.py  client.py
src/atlas/inference/: __init__.py  client.py  models.py  telemetry.py
src/atlas/mcp_client/: __init__.py  acl.py  acl.py.bak.phase3  client.py  client.py.bak.phase3
src/atlas/mcp_server/: __init__.py  acl.py  errors.py  events.py  inference.py  inputs.py  memory.py  server.py  tasks.py  telemetry.py
src/atlas/storage/: __init__.py  client.py  creds.py
tests/: test_smoke.py
tests/agent/: test_communication.py  test_infrastructure.py  test_loop.py  test_mercury.py  test_mercury_phase7.py  test_poller.py  test_talent.py  test_vendor.py
tests/db/: test_cross_schema_read.py  test_db_smoke.py  test_migration_smoke.py
tests/embeddings/: test_embed_batch.py  test_embed_cache.py  test_embed_smoke.py  test_embed_token_logging.py
tests/inference/: test_inference_chat.py  test_inference_smoke.py  test_inference_streaming.py  test_inference_token_logging.py
tests/integration/: test_integration.py
tests/mcp_client/: test_events_create.py  test_mcp_acl.py  test_mcp_connect.py  test_mcp_token_logging.py  test_mcp_tool_call.py
tests/storage/: test_creds_resolution.py  test_storage_roundtrip.py  test_storage_smoke.py
(+8 files in other folders)
