[project]
name = "atlas"
version = "0.1.0"
description = "Atlas - Head of Operations agent (Santigrey homelab)"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "boto3>=1.34",
    "pydantic>=2.7",
    "httpx>=0.27",
    "structlog>=24.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]
