[project]
name = "atlas"
version = "0.1.0"
description = "Atlas - Head of Operations agent (Santigrey homelab)"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "boto3>=1.34",
    "pydantic>=2.7",
    "httpx>=0.27",
    "structlog>=24.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that take more than 5 seconds",
    "integration: end-to-end integration tests requiring DB + agent loop",
    "homelab: tests requiring live homelab connectivity (DB / MCP / inference / embeddings); skipped in CI via -m 'not homelab'",
]
filterwarnings = [
    "ignore::DeprecationWarning:mcp.client.streamable_http",
]
